--- a/index.css
+++ b/index.css
@@ -1,3 +1,46 @@
-div {
-  margin: 10px 0 10px 0;
+html, body {
+  box-sizing: border-box;
+  font-size: 10px;
+  height: 100%;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  width: 100%;
+  height: 100px;
+  border-bottom: 1px solid black;
+  padding-left: 5px;
+}
+
+header #title {
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+header #subtitle {
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+header #description {
+  font-size: 1.5rem;
+}
+
+main {
+  width: 100%;
+  height: inherit;
+}
+
+main ul {
+  margin-top: 10px;
+  margin-left: 30px;
+}
+
+main ul li {
+  font-size: 1.5rem;
 }
