--- a/index.css
+++ b/index.css
@@ -10,10 +10,24 @@ html, body {
   padding: 0;
 }
 
+hr {
+  border: none;
+  border-top: 3px double black;
+  color: royalblue;
+  overflow: visible;
+  text-align: center;
+}
+
+hr::after {
+  background: white;
+  content: '♪';
+  position: relative;
+  top: -14px;
+}
+
 header {
   width: 100%;
   height: 100px;
-  border-bottom: 1px solid black;
   padding-left: 5px;
 }
 
